--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Fetch frontend assessment that pulls data from an API and displays in table format">
+    <title>Fetch Frontend Assessment</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+    <h1>Fetch Frontend Assessment</h1>
     <div id="outer">
         <table id="table-header"></table>
         <div id="table-holder">
-        <table id="data-table"></table>
+            <table id="data-table"></table>
         </div>
     </div>
     <script src="./assets/script.js"></script>
