loading animation added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 <body>
     <h1>Fetch Frontend Assessment</h1>
-    <div id="outer">
+    <div id="loader-holder">
+        <div id="loader"></div>
+        <div id="loader-text">Loading</div>
+    </div>
+    
+    <div id="outer" class="hidden">
         <table id="table-header"></table>
         <div id="table-holder">
             <table id="data-table"></table>
